// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/AddressForm default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c19 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c16 {
  margin-bottom: 1.875rem;
}

.c18 {
  top: 100%;
}

.c13 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c11 {
  position: relative;
  width: 100%;
}

.c12 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c17 {
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c14 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c15 {
  width: 100%;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              1
            </span>
            <span
              className="c7"
            >
              Cliente
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="given-name"
                    className="c12"
                    data-cy="addressFormFirstName"
                    disabled={false}
                    name="firstName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    First Name
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="family-name"
                    className="c12"
                    data-cy="addressFormLastName"
                    disabled={false}
                    name="lastName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Last Name
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="organization"
                    className="c12"
                    data-cy="addressFormCompanyName"
                    disabled={false}
                    name="companyName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Company Name (Optional)
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="tel"
                    className="c12"
                    data-cy="addressFormPhone"
                    disabled={false}
                    name="phone"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Phone
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              2
            </span>
            <span
              className="c7"
            >
              Dirección
            </span>
          </div>
          <div
            className="c15"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line1"
                    className="c12"
                    data-cy="addressFormStreetAddress1"
                    disabled={false}
                    name="streetAddress1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Address line 1
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c15"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line2"
                    className="c12"
                    data-cy="addressFormStreetAddress2"
                    disabled={false}
                    name="streetAddress2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Address line 2
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-level1"
                    className="c12"
                    data-cy="addressFormCity"
                    disabled={false}
                    name="city"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    City
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="postal-code"
                    className="c12"
                    data-cy="addressFormPostalCode"
                    disabled={false}
                    name="postalCode"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    ZIP/Postal Code
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c16"
            >
              <div
                className="css-1pcexqc-container"
                onKeyDown={[Function]}
              >
                <div
                  className="css-133ddnz-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className="css-tntsk8"
                  >
                    <div
                      className="css-151xaom-placeholder"
                    >
                      
                    </div>
                    <div
                      className="css-1g6gooi"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          data-cy="addressFormCountry"
                          disabled={false}
                          id="react-select-7-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c17"
                    rotate="false"
                  >
                    <svg
                      height={10}
                      viewBox="0 0 32 32"
                      width={10}
                    >
                      <path
                        d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                        fill="#21125E"
                      />
                    </svg>
                  </div>
                </div>
                <label
                  className="c13"
                >
                  Country
                </label>
              </div>
              <div
                className="c18"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-level2"
                    className="c12"
                    data-cy="addressFormCountryArea"
                    disabled={false}
                    name="countryArea"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    State/province
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c19"
  />
</div>
`;

exports[`Storyshots @components/organisms/AddressForm with errors 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c22 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c15 {
  color: #c22d74;
  font-size: 0.75rem;
}

.c16 {
  margin: 0;
}

.c19 {
  margin-bottom: 1.875rem;
}

.c21 {
  top: 100%;
}

.c13 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c17:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #c22d74;
  color: #c22d74;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: #c22d74;
  outline-width: 1px;
  outline-style: solid;
  border-color: #c22d74;
  outline-color: #c22d74;
}

.c11 {
  position: relative;
  width: 100%;
}

.c12 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c20 {
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c14 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c18 {
  width: 100%;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              1
            </span>
            <span
              className="c7"
            >
              Cliente
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="given-name"
                    className="c12"
                    data-cy="addressFormFirstName"
                    disabled={false}
                    name="firstName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    First Name
                  </label>
                </div>
              </div>
              <div
                className="c14"
              >
                <div
                  className="c15"
                >
                  <p
                    className="c16"
                  >
                    This is error
                  </p>
                </div>
              </div>
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="family-name"
                    className="c12"
                    data-cy="addressFormLastName"
                    disabled={false}
                    name="lastName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Last Name
                  </label>
                </div>
              </div>
              <div
                className="c14"
              >
                <div
                  className="c15"
                >
                  <p
                    className="c16"
                  >
                    This is error
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="organization"
                    className="c12"
                    data-cy="addressFormCompanyName"
                    disabled={false}
                    name="companyName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Company Name (Optional)
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="tel"
                    className="c12"
                    data-cy="addressFormPhone"
                    disabled={false}
                    name="phone"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Phone
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              2
            </span>
            <span
              className="c7"
            >
              Dirección
            </span>
          </div>
          <div
            className="c18"
          >
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line1"
                    className="c12"
                    data-cy="addressFormStreetAddress1"
                    disabled={false}
                    name="streetAddress1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Address line 1
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c18"
          >
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line2"
                    className="c12"
                    data-cy="addressFormStreetAddress2"
                    disabled={false}
                    name="streetAddress2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    Address line 2
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-level1"
                    className="c12"
                    data-cy="addressFormCity"
                    disabled={false}
                    name="city"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    City
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="postal-code"
                    className="c12"
                    data-cy="addressFormPostalCode"
                    disabled={false}
                    name="postalCode"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    ZIP/Postal Code
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c19"
            >
              <div
                className="css-1pcexqc-container"
                onKeyDown={[Function]}
              >
                <div
                  className="css-133ddnz-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className="css-tntsk8"
                  >
                    <div
                      className="css-151xaom-placeholder"
                    >
                      
                    </div>
                    <div
                      className="css-1g6gooi"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          data-cy="addressFormCountry"
                          disabled={false}
                          id="react-select-8-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c20"
                    rotate="false"
                  >
                    <svg
                      height={10}
                      viewBox="0 0 32 32"
                      width={10}
                    >
                      <path
                        d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                        fill="#21125E"
                      />
                    </svg>
                  </div>
                </div>
                <label
                  className="c13"
                >
                  Country
                </label>
              </div>
              <div
                className="c21"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-level2"
                    className="c12"
                    data-cy="addressFormCountryArea"
                    disabled={false}
                    name="countryArea"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                  />
                  <label
                    className="c13"
                  >
                    State/province
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c22"
  />
</div>
`;

exports[`Storyshots @components/organisms/AddressForm with partial data 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c20 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c16 {
  margin-bottom: 1.875rem;
}

.c19 {
  top: 100%;
}

.c13 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: transparent;
  font-size: 0.75rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c18 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #f1f5f5;
  font-size: 0.75rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c11 {
  position: relative;
  width: 100%;
}

.c12 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c17 {
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c14 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c15 {
  width: 100%;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              1
            </span>
            <span
              className="c7"
            >
              Cliente
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="given-name"
                    className="c12"
                    data-cy="addressFormFirstName"
                    disabled={false}
                    name="firstName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="John"
                  />
                  <label
                    className="c13"
                  >
                    First Name
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="family-name"
                    className="c12"
                    data-cy="addressFormLastName"
                    disabled={false}
                    name="lastName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="Doe"
                  />
                  <label
                    className="c13"
                  >
                    Last Name
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="organization"
                    className="c12"
                    data-cy="addressFormCompanyName"
                    disabled={false}
                    name="companyName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="Mirumee"
                  />
                  <label
                    className="c13"
                  >
                    Company Name (Optional)
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="tel"
                    className="c12"
                    data-cy="addressFormPhone"
                    disabled={false}
                    name="phone"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="555-55555"
                  />
                  <label
                    className="c13"
                  >
                    Phone
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              2
            </span>
            <span
              className="c7"
            >
              Dirección
            </span>
          </div>
          <div
            className="c15"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line1"
                    className="c12"
                    data-cy="addressFormStreetAddress1"
                    disabled={false}
                    name="streetAddress1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="Street line 1"
                  />
                  <label
                    className="c13"
                  >
                    Address line 1
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c15"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line2"
                    className="c12"
                    data-cy="addressFormStreetAddress2"
                    disabled={false}
                    name="streetAddress2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="Street line 2"
                  />
                  <label
                    className="c13"
                  >
                    Address line 2
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-level1"
                    className="c12"
                    data-cy="addressFormCity"
                    disabled={false}
                    name="city"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="New York"
                  />
                  <label
                    className="c13"
                  >
                    City
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="postal-code"
                    className="c12"
                    data-cy="addressFormPostalCode"
                    disabled={false}
                    name="postalCode"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="90210"
                  />
                  <label
                    className="c13"
                  >
                    ZIP/Postal Code
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c16"
            >
              <div
                className="css-1pcexqc-container"
                onKeyDown={[Function]}
              >
                <div
                  className="css-133ddnz-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className="css-tntsk8"
                  >
                    <div
                      className="css-dvua67-singleValue"
                    >
                      United States of America
                    </div>
                    <div
                      className="css-1g6gooi"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          data-cy="addressFormCountry"
                          disabled={false}
                          id="react-select-9-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c17"
                    rotate="false"
                  >
                    <svg
                      height={10}
                      viewBox="0 0 32 32"
                      width={10}
                    >
                      <path
                        d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                        fill="#21125E"
                      />
                    </svg>
                  </div>
                </div>
                <label
                  className="c18"
                >
                  Country
                </label>
              </div>
              <div
                className="c19"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-level2"
                    className="c12"
                    data-cy="addressFormCountryArea"
                    disabled={false}
                    name="countryArea"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value="NY"
                  />
                  <label
                    className="c13"
                  >
                    State/province
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c20"
  />
</div>
`;
